# IntelliProbe

./: Cargo.toml  README.md  Readme.md
IntelliProbe/src/: lib.rs
IntelliProbe/src/api/: routes.rs
IntelliProbe/src/detectors/: package_manager.rs
IntelliProbe/src/exporters/: html.rs
IntelliProbe/src/probes/: benchmarks.rs  cpu.rs  gpu.rs  libraries.rs  memory.rs  mod.rs
IntelliProbe/src/web/: dashboard.html
src/: main.rs
src/analyze/: mod.rs
src/api/: mod.rs
src/comparators/: mod.rs  reference.rs
src/detectors/: environment.rs  mod.rs
src/exporters/: json.rs  markdown.rs  mod.rs
src/probes/: languages.rs  platform.rs
src/web/: mod.rs
