[package]
name = "intelli_probe"
version = "1.0.0"
edition = "2021"
authors = ["Arnaud Flourac"]
description = "Intelligent workstation profiler for AI and development capabilities"
license = "Apache-2.0"

[features]
default = []
web = ["dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower", "dep:tower-http"]
tui = ["dep:ratatui", "dep:crossterm"]
bench = ["dep:benchmark-simple", "dep:cpu-time"]
cloud = ["dep:aws-sdk-s3", "dep:reqwest", "dep:aws-config"]
full = ["web", "tui", "bench", "cloud"]

[dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
rayon = "1.10"
chrono = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }

# System
num_cpus = "1.16"
sysinfo = "0.30"
which = "6.0"
regex = "1.10"
walkdir = "2.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Web (optionnel)
axum = { version = "0.7", optional = true }
hyper = { version = "1.2", optional = true }
hyper-util = { version = "0.1", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }

# TUI (optionnel)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# Benchmarks (optionnel)
benchmark-simple = { version = "0.1", optional = true }
cpu-time = { version = "1.0", optional = true }

# Cloud (optionnel)
aws-sdk-s3 = { version = "1.5", optional = true }
aws-config = { version = "1.5", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }

# Utils
duct = "0.13"
futures-util = "0.3"
once_cell = "1.19"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3